--- a/WCCustomers/WCCustomers/WCCustomersImport.csproj
+++ b/WCCustomers/WCCustomers/WCCustomersImport.csproj
@@ -34,6 +34,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,9 +51,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Input\Input.csproj">
+    <ProjectReference Include="..\Input\Data.csproj">
       <Project>{7b5ff160-38da-403e-acf5-f9cdab89655c}</Project>
-      <Name>Input</Name>
+      <Name>Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\Logic\Logic.csproj">
       <Project>{82900f14-a1b2-4d37-9024-f5bc881461c8}</Project>
