--- a/WCCustomers/WCCustomers/App.config
+++ b/WCCustomers/WCCustomers/App.config
@@ -4,6 +4,9 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
 
+  <connectionStrings>
+    <add name="SAPImportConnectionString" connectionString="Server=AMSAPP012\Dev;Initial Catalog=SAPImport_Monkey;Integrated Security=true;"  providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="LogDaysToKeep" value="30" />
   </appSettings>
