--- a/WCCustomers/LogicTest/LogicTest.csproj
+++ b/WCCustomers/LogicTest/LogicTest.csproj
@@ -69,8 +69,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Input\Data.csproj">
-      <Project>{7B5FF160-38DA-403E-ACF5-F9CDAB89655C}</Project>
+    <ProjectReference Include="..\Data\Data.csproj">
+      <Project>{7b5ff160-38da-403e-acf5-f9cdab89655c}</Project>
       <Name>Data</Name>
     </ProjectReference>
     <ProjectReference Include="..\Logic\Logic.csproj">
