--- a/WCCustomers/WCCustomers/WCCustomersImport.csproj
+++ b/WCCustomers/WCCustomers/WCCustomersImport.csproj
@@ -51,7 +51,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Input\Data.csproj">
+    <ProjectReference Include="..\Data\Data.csproj">
       <Project>{7b5ff160-38da-403e-acf5-f9cdab89655c}</Project>
       <Name>Data</Name>
     </ProjectReference>
