CustomerImportService is now an internal class

--- a/WCCustomers/Logic/Logic.csproj
+++ b/WCCustomers/Logic/Logic.csproj
@@ -44,6 +44,8 @@
   <ItemGroup>
     <Compile Include="CustomerImportService.cs" />
     <Compile Include="CustomerImportServicePure.cs" />
+    <Compile Include="Factories.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
