now upserting WCSales DB

--- a/WCCustomers/WCCustomers/App.config
+++ b/WCCustomers/WCCustomers/App.config
@@ -6,6 +6,7 @@
 
   <connectionStrings>
     <add name="SAPImportConnectionString" connectionString="Server=AMSAPP012\Dev;Initial Catalog=SAPImport_Monkey;Integrated Security=true;"  providerName="System.Data.SqlClient" />
+    <add name="WCSalesConnectionString" connectionString="Server=AMSAPP012\Dev;Initial Catalog=WeConnectSales_Monkey;Integrated Security=true;"  providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="LogDaysToKeep" value="30" />
